--- a/WakeOverLan_Android/app/src/main/res/layout/activity_main.xml
+++ b/WakeOverLan_Android/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="244dp"
+        android:layout_marginBottom="248dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/enter_machine_mac_here"
@@ -37,7 +37,7 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -87,11 +87,11 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="124dp"
-        android:layout_height="wrap_content"
+        android:layout_width="126dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="200dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/enter_port"
@@ -99,7 +99,7 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.328"
+        app:layout_constraintHorizontal_bias="0.33"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
