--- a/WakeOverLan_Android/app/src/main/res/layout/activity_main.xml
+++ b/WakeOverLan_Android/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="214dp"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="296dp"
@@ -18,6 +18,7 @@
         android:hint="@string/enter_machine_ip_here"
         android:inputType="textPersonName"
         android:text=""
+        android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -25,8 +26,8 @@
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="248dp"
@@ -35,6 +36,7 @@
         android:hint="@string/enter_machine_mac_here"
         android:inputType="textPersonName"
         android:text=""
+        android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
@@ -87,7 +89,7 @@
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="126dp"
+        android:layout_width="216dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -97,15 +99,16 @@
         android:hint="@string/enter_port"
         android:inputType="textPersonName"
         android:text=""
+        android:textAlignment="gravity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="183dp"
-        android:layout_height="wrap_content"
+        android:layout_width="208dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
